Criado classe Controller com anotations